--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: aggregator
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5432/testdb
+    username: admin
+    password: admin
+
