--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     username: admin
     password: admin
 
+external:
+  open-weather:
+    api-key: 6030d2ca55960eebddc5f5768b9f4f77
+    direct-geocoding-api-url: "http://api.openweathermap.org/geo/1.0/direct?q=%S&appid=%S"
+
